Enlève le bug de l'affichage avec trop de gap du portfolio suite à la modification de PhotoGallery pour la page projet

--- a/components/ui/atoms/Button/button.module.scss
+++ b/components/ui/atoms/Button/button.module.scss
@@ -22,9 +22,10 @@
 
     .ripple {
         position: absolute;
-        background: rgba(255, 255, 255, 0.3);
+        background: rgba(255, 255, 255, 0.35);
         border-radius: 50%;
-        pointer-events: none;
         transform: translate(-50%, -50%);
+        transform-origin: center;
+        pointer-events: none;
     }
 }
