--- a/components/ui/atoms/PhotoGallery/photoGallery.module.scss
+++ b/components/ui/atoms/PhotoGallery/photoGallery.module.scss
@@ -1,7 +1,7 @@
 .imageWrapper {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,8 +13,7 @@
         0 0 0 0 rgba(255, 255, 255, 0);
     &__image {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: auto;
         border: 1px solid var(--color-border-photo);
         user-select: none;
         -webkit-user-select: none;
